add tic tac toe components in html and add files

--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main>
+        <div class="game-content">
+            <div class="board">
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+                <div class="tile"></div>
+            </div>
+            <div class="players">
+                <div class="player"></div>
+                <div class="player"></div>
+            </div>
+        </div>
+        <div class="game-info">
+            <h1>Tic Tac Toe</h1>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
