add tic-tac-toe functionality

--- a/index.html
+++ b/index.html
@@ -10,24 +10,14 @@
     <main>
         <div class="game-content">
             <div class="board-background">
-                <div class="board">
-                    <div class="tile"></div>
-                    <div class="tile"></div>
-                    <div class="tile"></div>
-                    <div class="tile"></div>
-                    <div class="tile"></div>
-                    <div class="tile"></div>
-                    <div class="tile"></div>
-                    <div class="tile"></div>
-                    <div class="tile"></div>
-                </div>
+                <div class="board"></div>
             </div>
             <div class="players">
-                <div class="player selected">
+                <div class="player player1 selected">
                     <img src="assets/catgirl1.png" alt="catgirl"/>
                     <span id="player1">Player 1</span>
                 </div>
-                <div class="player">
+                <div class="player player2">
                     <img src="assets/catgirl2.png" alt="catgirl"/>
                     <span id="player2">Player 2</span>
                 </div>
@@ -38,7 +28,7 @@
             <div class="game-options">
                 <button id="reset">Reset</button>
                 <button id="menu">Menu</button>
-                <button id="settings">Settings</button>
+                <button id="options">Options</button>
             </div>
         </div>
     </main>
