add reset function in tic-tac-toe

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <main>
         <div class="game-content">
+            <dialog class="win-dialog">
+                
+            </dialog>
             <div class="board-background">
                 <div class="board"></div>
             </div>
@@ -27,7 +30,6 @@
             <h1>Tic Tac Toe</h1>
             <div class="game-options">
                 <button id="reset">Reset</button>
-                <button id="menu">Menu</button>
                 <button id="options">Options</button>
             </div>
         </div>
