add draw and remove unecessary buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <main>
         <div class="game-content">
             <dialog class="win-dialog">
-                
+                <div>
+                    <h1 id="win-status"></h1>
+                    <div class="win-dialog-button">
+                        <button id="replay">Replay</button>
+                    </div>
+                </div>
             </dialog>
             <div class="board-background">
                 <div class="board"></div>
@@ -28,9 +33,8 @@
         </div>
         <div class="game-info">
             <h1>Tic Tac Toe</h1>
-            <div class="game-options">
+            <div class="game-option">
                 <button id="reset">Reset</button>
-                <button id="options">Options</button>
             </div>
         </div>
     </main>
