--- a/index.html
+++ b/index.html
@@ -23,18 +23,19 @@
             <div class="players">
                 <div class="player player1 selected">
                     <img src="assets/catgirl1.png" alt="catgirl"/>
-                    <span id="player1">Player 1</span>
+                    <span id="player1">Player 1</span>:<span class="score" id="player1-score">0</span>
                 </div>
                 <div class="player player2">
                     <img src="assets/catgirl2.png" alt="catgirl"/>
-                    <span id="player2">Player 2</span>
+                    <span id="player2">Player 2</span>:<span class="score" id="player2-score">0</span>
                 </div>
             </div>
         </div>
         <div class="game-info">
             <h1>Tic Tac Toe</h1>
             <div class="game-option">
-                <button id="reset">Reset</button>
+                <button id="reset">Reset Game</button>
+                <button id="reset-score">Reset Score</button>
             </div>
         </div>
     </main>
